force-app/main/default/objects/CaseInvoice__c/CaseInvoice__c.object-meta.xml
<CustomObject>
    <description>[a00][CaseInvoice__c] Notas fiscais do caso.</description>
    <label>Nota fiscal do caso</label>
    <nameField>
        <label>Nota fiscal do caso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas fiscais do caso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>