force-app/main/default/objects/CaseInvoice__c/fields/CaseMdt__c.field-meta.xml
<CustomField>
    <fullName>CaseMdt__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>NotasFiscaisCaso</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>