force-app/main/default/objects/CaseInvoice__c/fields/CreditNmb__c.field-meta.xml
<CustomField>
    <fullName>CreditNmb__c</fullName>
    <label>Crédito</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>