force-app/main/default/objects/CaseInvoice__c/fields/ExtendDaysNmb__c.field-meta.xml
<CustomField>
    <fullName>ExtendDaysNmb__c</fullName>
    <label>Dias a prorrogar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>