force-app/main/default/objects/CaseInvoice__c/fields/OrderLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Notas fiscais do caso</relationshipLabel>
    <relationshipName>NotasFiscaisCaso</relationshipName>
    <type>Lookup</type>
</CustomField>