force-app/main/default/objects/CaseInvoice__c/fields/QuotaNmb__c.field-meta.xml
<CustomField>
    <fullName>QuotaNmb__c</fullName>
    <label>Parcela</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>